Resolución de conflictos de fusión con origin/main

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="background"></div>
     <div class="container">
         <div class="header">
-			<img src="https://img.freeflagicons.com/thumb/round_icon/european_union/european_union_640.png" alt="Bandera de la UE" class="eu-flag">
+			<img src="../images/european_union_640.png" alt="Bandera de la UE" class="eu-flag">
             <h1 class="title">Soberanía Digital Europea</h1>            
             <div class="language-selector">
                 <select id="language">
@@ -26,7 +26,7 @@
                 <div class="tab" data-tab="alternativas-pc">Alternativas Europeas</div>
                 <div class="tab" data-tab="alternativas-movil">Alternativas Para móviles</div>
                 <div class="tab" data-tab="webmail">Webmail Europeos</div>
-                <div class="tab" data-tab="drive">Almacenamiento en la Nube</div>
+                <div class="tab" data-tab="drive">Disco en la Nube</div>
                 <div class="tab" data-tab="office">Herramientas de Oficina</div>
             </div>
             <div class="main-content">
@@ -87,7 +87,7 @@
                 document.querySelector('.tab[data-tab="alternativas-pc"]').textContent = 'Alternativas europeas de navegadores y buscadores';
                 document.querySelector('.tab[data-tab="alternativas-movil"]').textContent = 'Alternativas europeas para móviles';
                 document.querySelector('.tab[data-tab="webmail"]').textContent = 'Webmail Europeos';
-                document.querySelector('.tab[data-tab="drive"]').textContent = 'Almacenamiento en la Nube';
+                document.querySelector('.tab[data-tab="drive"]').textContent = 'Disco en la Nube';
                 document.querySelector('.tab[data-tab="office"]').textContent = 'Herramientas de Oficina';
                 
                 // Cambiar el idioma en los iframes
