--- a/src/navegadores.html
+++ b/src/navegadores.html
@@ -21,7 +21,7 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Google Chrome</h3>
-                    <p class="browser-info">Origen: Estados Unidos</p>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
                 </div>
             </div>
             <div class="browser-details">
@@ -39,7 +39,7 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Safari</h3>
-                    <p class="browser-info">Origen: Estados Unidos</p>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
                 </div>
             </div>
             <div class="browser-details">
@@ -57,7 +57,7 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Microsoft Edge</h3>
-                    <p class="browser-info">Origen: Estados Unidos</p>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
                 </div>
             </div>
             <div class="browser-details">
@@ -75,7 +75,7 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Mozilla Firefox</h3>
-                    <p class="browser-info">Origen: Estados Unidos</p>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
                 </div>
             </div>
             <div class="browser-details">
@@ -93,14 +93,32 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Opera browser</h3>
-                    <p class="browser-info">Origen: Noruega (ahora propiedad china)</p>
+                    <p class="browser-info">Origen: Noruega (ahora propiedad china) <span class="flag">🇳🇴→🇨🇳</span></p>
                 </div>
             </div>
             <div class="browser-details">
-                <p>.:|:.</p>
-                <p>.:|:.</p>
-                <p><a href="https://www.google.com/chrome/" target="_blank">Sitio web oficial</a></p>
-                <p class="stats">Cuota de mercado: ~..% (Abril 2025)</p>
+                <p>Opera es un navegador web creado por la empresa noruega Opera Software. Actualmente propiedad de Golden Brick Capital, empresa China de inversión.</p>
+                <p>Usa el motor de renderizado Blink.Tiene versiones para computadoras de escritorio, teléfonos móviles y tabletas.</p>
+                <p><a href="https://https://www.opera.com/" target="_blank">Sitio web oficial</a></p>
+                <p class="stats">Cuota de mercado: ~2% (Abril 2025)</p>
+            </div>
+        </div>
+
+        <div class="browser-card">
+            <div class="browser-header">
+                <div class="browser-icon">
+                    <img class="browser-icon" src="https://preview.redd.it/r5kqt39bye971.png?width=640&crop=smart&auto=webp&s=a860f8235d1dd0d045de8f51e9328c2c82900746" alt="Brave" class="browser-icon">
+                </div>
+                <div>
+                    <h3 class="browser-name">Brave  browser</h3>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
+                </div>
+            </div>
+            <div class="browser-details">
+                <p>Brave es un navegador de privacidad que se publicó por primera vez en 2016. Es desarrollado por Brave Software, Inc., con sede en California. Se basa en el navegador chromium, y es gratuito y de código abierto.</p>
+                <p>Utiliza Blink como motor. Es un navegador que bloquea automáticamente la mayoría de los anuncios y rastreadores de sitios web en su configuración predeterminada.</p>
+                <p><a href="https://https://brave.com/" target="_blank">Sitio web oficial</a></p>
+                <p class="stats">Cuota de mercado: ~1,27% (Abril 2025)</p>
             </div>
         </div>
 
@@ -116,7 +134,7 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Google Search</h3>
-                    <p class="browser-info">Origen: Estados Unidos</p>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
                 </div>
             </div>
             <div class="browser-details">
@@ -130,11 +148,11 @@
         <div class="browser-card">
             <div class="browser-header">
                 <div class="browser-icon">
-                    <img class="browser-icon" src="https://th.bing.com/th/id/OIP.m9Gj1Ln_jLAxo9d846yeZwHaDy?rs=1&pid=ImgDetMain" alt="Bing">
+                    <img class="browser-icon" src="../images/bing-icon-png-4847.png" alt="Bing">
                 </div>
                 <div>
                     <h3 class="browser-name">Bing</h3>
-                    <p class="browser-info">Origen: Estados Unidos</p>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
                 </div>
             </div>
             <div class="browser-details">
@@ -144,15 +162,33 @@
                 <p class="stats">Cuota de mercado: ~3% (Abril 2025)</p>
             </div>
         </div>
-        
+
         <div class="browser-card">
             <div class="browser-header">
                 <div class="browser-icon">
-                    <img class="browser-icon" src="https://is2-ssl.mzstatic.com/image/thumb/Purple112/v4/cc/1b/97/cc1b97b4-fb1a-640b-7d76-83ad0a0430d1/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x630wa.png" alt="Yahoo">
+                    <img class="browser-icon" src="../images/DDG2.svg" alt="DuckDuckGo">
+                </div>
+                <div>
+                    <h3 class="browser-name">DuckDuckGo</h3>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
+                </div>
+            </div>
+            <div class="browser-details">
+                <p>DuckDuckGo es un motor de búsqueda que enfatiza la protección de la privacidad de los usuarios y evita el filtro de resultados de búsqueda personalizados.</p>
+                <p>DuckDuckGo no muestra resultados de búsqueda de granjas de contenido.​ Utiliza varias Api-Ap de otros sitios web para mostrar resultados rápidos a las consultas y para los enlaces tradicionales utiliza la ayuda de sus socios (principalmente bing) y su propio rastreador.</p>
+                <p><a href="https://duckduckgo.com/" target="_blank">Oficiala retejo</a></p>
+                <p class="stats">Cuota de mercado: ~?% (aprilo 2025)</p>
+            </div>
+        </div>
+
+        <div class="browser-card">
+            <div class="browser-header">
+                <div class="browser-icon">
+                    <img class="browser-icon" src="https://cdn1.iconfinder.com/data/icons/smallicons-logotypes/32/yahoo-512.png" alt="Yahoo">
                 </div>
                 <div>
                     <h3 class="browser-name">Yahoo Search</h3>
-                    <p class="browser-info">Origen: Estados Unidos</p>
+                    <p class="browser-info">Origen: Estados Unidos <span class="flag">🇺🇸</span></p>
                 </div>
             </div>
             <div class="browser-details">
@@ -166,11 +202,11 @@
         <div class="browser-card">
             <div class="browser-header">
                 <div class="browser-icon">
-                    <img class="browser-icon" src="https://th.bing.com/th/id/OIP.dCawD7JCeol96LQYjEx5MwHaE5?rs=1&pid=ImgDetMain" alt="Baidu">
+                    <img class="browser-icon" src="../images/Baidu.png" alt="Baidu">
                 </div>
                 <div>
                     <h3 class="browser-name">Baidu</h3>
-                    <p class="browser-info">Origen: China</p>
+                    <p class="browser-info">Origen: China <span class="flag">🇨🇳</span></p>
                 </div>
             </div>
             <div class="browser-details">
