--- a/src/alternativas-movil.html
+++ b/src/alternativas-movil.html
@@ -46,7 +46,7 @@
         <div class="browser-card">
             <div class="browser-header">
                 <div class="browser-icon">
-                    <img src="/api/placeholder/50/50" alt="Fennec F-Droid">
+                    <img class="browser-icon" src="https://f-droid.org/repo/org.mozilla.fennec_fdroid/en-US/icon_RCxqbONQXgoTeWvoYAQjC0nmDVTlBoCXvzZ1Rx27gRM=.png" alt="Fennec F-Droid">
                 </div>
                 <div>
                     <h3 class="browser-name">Fennec F-Droid</h3>
