--- a/src/alternativas-pc_eo.html
+++ b/src/alternativas-pc_eo.html
@@ -159,7 +159,7 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Mojeek</h3>
-                    <p class="browser-info">Deveno: Britio <span class="flag">🇬🇧</span></p>
+                    <p class="browser-info" style="color: red;">Deveno: Britio <span class="flag">🇬🇧,👀 ne 🇪🇺</span></p>
                 </div>
             </div>
             <div class="browser-details">
