--- a/src/inicio.html
+++ b/src/inicio.html
@@ -10,7 +10,7 @@
     <h1>Bienvenido a Alternativas Digitales Europeas</h1>
     <p>Esta guía le ayudará a descubrir alternativas europeas a servicios digitales comunes, contribuyendo a la soberanía digital europea.</p>
     
-    <h3>En esta guía encontrará:</h3>
+    <p>En esta guía encontrará:</p>
     <ul>
         <li>Estudio general de navegadores y búscadores</li>
         <li>Alternativas europeas de navegadores y búscadores</li>
