--- a/src/inicio_eo.html
+++ b/src/inicio_eo.html
@@ -10,7 +10,7 @@
     <h1>Bonvenon al Eŭropaj Digitalaj Alternativoj</h1>
     <p>Ĉi tiu gvidilo helpos vin malkovri eŭropajn alternativojn al oftaj digitalaj servoj, kontribuante al eŭropa digita suvereneco.</p>
     
-    <h3>En ĉi tiu gvidilo vi trovos:</h3>
+    <p>En ĉi tiu gvidilo vi trovos:</p>
     <ul>
         <li>Ĝenerala studo de retumiloj kaj serĉiloj</li>
         <li>Eŭropaj alternativoj por retumiloj kaj serĉiloj</li>
