--- a/src/alternativas-pc.html
+++ b/src/alternativas-pc.html
@@ -159,7 +159,7 @@
                 </div>
                 <div>
                     <h3 class="browser-name">Mojeek</h3>
-                    <p class="browser-info">Origen: Reino Unido <span class="flag">🇬🇧</span></p>
+                    <p class="browser-info" style="color: red;">Origen: Reino Unido <span class="flag">🇬🇧, 👀 no 🇪🇺</span></p>
                 </div>
             </div>
             <div class="browser-details">
